Added some styling and corrected dark theme issue

--- a/Prototype/templates/base.html.jinja2
+++ b/Prototype/templates/base.html.jinja2
@@ -26,14 +26,12 @@
         <div class="navbar-nav">
             <a class="nav-item nav-link" href="{{ url_for('feed.feed_index') }}"><i
                     class="nav-icon bi bi-house"></i></a>
-            <a class="nav-item nav-link" href="#"><i class="nav-icon bi bi-heart"></i></a>
             <a class="nav-item nav-link" href="{{ url_for('profile.profile_index') }}"><i
-                    class=" nav-icon bi bi-person"></i></a>
-            <a class="nav-item nav-link" href="{{ url_for('follow.follow_index') }}"><i style="color:beige "
-                                                                                        class="bi bi-segmented-nav"></i></a>
-            <a class="nav-item nav-link" href="{{ url_for('auth.logout') }}"><i style="color:beige "
-                                                                                class="bi bi-arrow-down-right-square"></i></a>
-
+                    class="nav-icon bi bi-person-circle"></i></a>
+            <a class="nav-item nav-link" href="{{ url_for('follow.follow_index') }}"><i
+                    class="nav-icon bi bi-people"></i></a>
+            <a class="nav-item nav-link" href=""><i
+                    class="nav-icon bi bi-search"></i></a>
         </div>
         <button id="themeSwitch"><i class="bi bi-brightness-high"></i></button>
     </div>
