--- a/Prototype/templates/feed/feed.html.jinja2
+++ b/Prototype/templates/feed/feed.html.jinja2
@@ -6,6 +6,7 @@
 {% endblock %}
 
 {% block content %}
+    <h1 class="section-title"> Votre Feed</h1>
     <div id="feed" class="d-flex justify-content-sm-center flex-wrap feed">
         {% for post in posts %}
             {# Here we create an id for the post card (different from the post id), ~ is used for concatenation #}
