--- a/Prototype/templates/post/create_post.html.jinja2
+++ b/Prototype/templates/post/create_post.html.jinja2
@@ -7,7 +7,7 @@
 
 {% block content %}
     <div class="container">
-        <h1>Nouveau post</h1>
+        <h1 class="section-title"> Créer un nouveau post</h1>
         <div class="container">
             {% with messages = get_flashed_messages() %}
                 {% if messages %}
