--- a/Prototype/templates/profile/user_follow_tile_macro.html.jinja2
+++ b/Prototype/templates/profile/user_follow_tile_macro.html.jinja2
@@ -1,7 +1,7 @@
 {% macro user_follow_tile(user, current_user) %}
-    <div id={{ 'user_tile_'~user.id }} class="card-body">
+    <div id={{ 'user_tile_'~user.id }}>
         <div class="d-flex justify-content-sm-between flex-wrap">
-            <p>{{ user.username }}</p>
+            <p style="font-weight: bolder">{{ user.username }}</p>
             <button onclick="follow_user({{ user.id }})" type="button" {% if current_user.is_following(user) %}
                     class="btn btn-primary" {% else %} class="btn btn-danger" {% endif %}>
                 {% if current_user.is_following(user) %} Se désabonner {% else %} S'abonner {% endif %}</button>
