Corrected dark theme issue

--- a/Prototype/static/css/style.css
+++ b/Prototype/static/css/style.css
@@ -123,3 +123,8 @@ nav {
     font-size: 10rem;
     color: black;
 }
+
+.follow-tile {
+    background: var(--card-color);
+    color: var(--font-color);
+}
