--- a/Prototype/templates/post/post_macro.html.jinja2
+++ b/Prototype/templates/post/post_macro.html.jinja2
@@ -14,10 +14,34 @@
                                     class="bi bi-heart-fill"> {{ post.hearts }} </i></button>
                         </div>
                         <footer class="blockquote-footer">
+                            <p>{{ post.username }} | {{ post.date }}</p>
+                        </footer>
+                    </div>
+                </blockquote>
+            </div>
+        </div>
+    </div>
+{% endmacro %}
+
+{# This macro is used to import the post template with the "delete" option (for the profile page) and avoid rewriting the same code again and again #}
+{% macro post_delete_template(post, post_card_id) %}
+    <div id="{{ post_card_id }}">
+        <div class="card post">
+            <img src="../../static/images_storage/{{ post.image_name }}" class="card-img-top" alt="Post {{ post.id }}">
+            <div class="card-body">
+                <blockquote class="blockquote mb-0">
+                    <div id="post_body">
+                        <div class="d-flex justify-content-sm-between flex-wrap">
+                            <p>{{ post.description }}</p>
+                            <button id="{{ 'button'~post_card_id }}" onclick="heart_post({{ post.id }})"
+                                    class="heart-button" {% if post.current_user_liked_it %}
+                                    style="color: indianred" {% endif %}><i
+                                    class="bi bi-heart-fill"> {{ post.hearts }} </i></button>
+                        </div>
+                        <footer class="blockquote-footer">
                             <div class="d-flex justify-content-sm-between flex-wrap">
                                 <p>{{ post.username }} | {{ post.date }}</p>
-                                {# We add an unique id to the button to animate it #}
-                                <button onclick="del_post({{ post.id }})" type="button" class="btn-close"></button>
+                                <button onclick="del_post({{ post.id }})" type="button" class="btn btn-danger">Supprimer</button>
                             </div>
                         </footer>
                     </div>
