--- a/Prototype/templates/profile/profile.html.jinja2
+++ b/Prototype/templates/profile/profile.html.jinja2
@@ -24,6 +24,20 @@
             {% endwith %}
         {% endfor %}
     </div>
+    <form method="POST" action="{{ url_for('profile.profile_index') }}">
+        {# Hidden tag used for CSRF protection #}
+        {{ comment_form.hidden_tag() }}
+        <div class="form-group row" style="margin: 1em;">
+            <label class="col-sm-2 col-form-label">Commentaire</label>
+                        <div class="col-sm-4">
+                {{ comment_form.post_id(placeholder="post id", class='form-control') }}
+            </div>
+            <div class="col-sm-4">
+                {{ comment_form.body(placeholder="Commentaire", class='form-control') }}
+            </div>
+        </div>
+        <button type="submit" class="btn btn-primary submit-button" style="margin: 1em;">Ajouter</button>
+    </form>
     <h2 class="subsection-title">Se déconnecter</h2>
     <div class="text-center">
         <a href="{{ url_for('auth.logout') }}"><i class="bi bi-box-arrow-right"
