--- a/Prototype/templates/post/post_macro.html.jinja2
+++ b/Prototype/templates/post/post_macro.html.jinja2
@@ -5,7 +5,7 @@
             <img src="../../static/images_storage/{{ post.image_name }}" class="card-img-top" alt="Post {{ post.id }}">
             <div class="card-body">
                 <blockquote class="blockquote mb-0">
-                    <div id="post_body" data-bs-toggle="modal" data-bs-target="#{{'exampleModal'~post_card_id  }}">
+                    <div id="post_body" data-bs-toggle="modal" data-bs-target="#{{ 'exampleModal'~post_card_id }}">
                         <div class="d-flex justify-content-sm-between flex-wrap">
                             <p>{{ post.description }}</p>
                             <button id="{{ 'button'~post_card_id }}" onclick="heart_post({{ post.id }})"
@@ -21,8 +21,9 @@
             </div>
         </div>
     </div>
-        <!-- Modal -->
-    <div class="modal fade" id="{{'exampleModal'~post_card_id  }}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <!-- Modal -->
+    <div class="modal fade" id="{{ 'exampleModal'~post_card_id }}" tabindex="-1" aria-labelledby="exampleModalLabel"
+         aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -36,6 +37,22 @@
                 </div>
                 <div class="modal-footer">
                     <p style="margin-right: 370px">Commentaires:</p>
+                    <ul>
+                        {% for comment in post.comments %}
+                            <li style="margin-right: 370px">{{ comment.body }} </li>
+                        {% endfor %}
+                    </ul>
+                    <form style="margin-right: 370px">
+                        <div class="form-group">
+                            <label>Commentaire</label>
+                            <input type="text" class="form-control" id="{{'body'~post_card_id }}"  aria-describedby="body"
+                            >
+                        </div>
+
+                        <button onclick="add_comment({{ post.user_id }},{{ post.id }}, '{{ post_card_id}}')" type="button"
+                                class="btn btn-primary">ajouter le com
+                        </button>
+                    </form>
                 </div>
             </div>
         </div>
@@ -49,7 +66,7 @@
             <img src="../../static/images_storage/{{ post.image_name }}" class="card-img-top" alt="Post {{ post.id }}">
             <div class="card-body">
                 <blockquote class="blockquote mb-0">
-                    <div id="post_body" data-bs-toggle="modal" data-bs-target="#{{'exampleModal'~post_card_id  }}">
+                    <div id="post_body" data-bs-toggle="modal" data-bs-target="#{{ 'exampleModal'~post_card_id }}">
                         <div class="d-flex justify-content-sm-between flex-wrap">
                             <p>{{ post.description }}</p>
                             <button id="{{ 'button'~post_card_id }}" onclick="heart_post({{ post.id }})"
@@ -60,7 +77,9 @@
                         <footer class="blockquote-footer">
                             <div class="d-flex justify-content-sm-between flex-wrap">
                                 <p>{{ post.username }} | {{ post.date }}</p>
-                                <button onclick="del_post({{ post.id }})" type="button" class="btn btn-danger">Supprimer</button>
+                                <button onclick="del_post({{ post.id }})" type="button" class="btn btn-danger">
+                                    Supprimer
+                                </button>
                             </div>
                         </footer>
                     </div>
@@ -69,7 +88,8 @@
         </div>
     </div>
     <!-- Modal -->
-    <div class="modal fade" id="{{'exampleModal'~post_card_id  }}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="{{ 'exampleModal'~post_card_id }}" tabindex="-1" aria-labelledby="exampleModalLabel"
+         aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -82,13 +102,23 @@
                     <p>{{ post.description }} </p>
                 </div>
                 <div class="modal-footer">
-                <p style="margin-right: 370px">Commentaires:</p>
-                <ul>
-                    {%for comment in post.comments%}
-                        <li style="margin-right: 370px">{{ comment.body }} </li>
+                    <p style="margin-right: 370px">Commentaires:</p>
+                    <ul>
+                        {% for comment in post.comments %}
+                            <li style="margin-right: 370px">{{ comment.body }} </li>
+                        {% endfor %}
+                    </ul>
+                    <form style="margin-right: 370px">
+                        <div class="form-group">
+                            <label>Commentaire</label>
+                            <input type="text" class="form-control" id="{{'body'~post_card_id }}"  aria-describedby="body"
+                            >
+                        </div>
 
-                    {% endfor %}
-                </ul>
+                        <button onclick="add_comment({{ post.user_id }},{{ post.id }}, '{{ post_card_id}}')" type="button"
+                                class="btn btn-primary">ajouter le com
+                        </button>
+                    </form>
                 </div>
             </div>
         </div>
