Better login/registration screens

--- a/Prototype/static/css/style.css
+++ b/Prototype/static/css/style.css
@@ -78,6 +78,11 @@ nav {
     padding: 0 10%;
 }
 
+.login-form {
+    position: relative;
+    left: 25%;
+}
+
 .submit-button {
     background: var(--accent-color);
     border: none;
