--- a/Prototype/templates/authentication/registration.jinja2
+++ b/Prototype/templates/authentication/registration.jinja2
@@ -6,7 +6,7 @@
 
 {% block content %}
     <div class="container">
-        <h1>Inscription</h1>
+        <h1 class="section-title">Inscription</h1>
         <div>
             {# To display guidance messages #}
             {% with messages = get_flashed_messages() %}
@@ -17,30 +17,33 @@
                 {% endif %}
             {% endwith %}
         </div>
-        <form method="POST" action="{{ url_for('auth.register') }}">
-            {# Hidden tag used for CSRF protection #}
-            {{ registration_form.hidden_tag() }}
-            <div class="form-group row" style="margin: 1em;">
-                <label class="col-sm-2 col-form-label">Email</label>
-                <div class="col-sm-4">
-                    {{ registration_form.email(placeholder='Email', class='form-control') }}
+        <div class="login-form">
+            <form method="POST" action="{{ url_for('auth.register') }}">
+                {# Hidden tag used for CSRF protection #}
+                {{ registration_form.hidden_tag() }}
+                <div class="form-group row" style="margin: 1em;">
+                    <label class="col-sm-2 col-form-label">Email</label>
+                    <div class="col-sm-4">
+                        {{ registration_form.email(placeholder='Email', class='form-control') }}
+                    </div>
                 </div>
-            </div>
-            <div class="form-group row" style="margin: 1em;">
-                <label class="col-sm-2 col-form-label">Nom d'utilisateur</label>
-                <div class="col-sm-4">
-                    {{ registration_form.username(placeholder="Nom d'utilisateur", class='form-control') }}
+                <div class="form-group row" style="margin: 1em;">
+                    <label class="col-sm-2 col-form-label">Nom d'utilisateur</label>
+                    <div class="col-sm-4">
+                        {{ registration_form.username(placeholder="Nom d'utilisateur", class='form-control') }}
+                    </div>
                 </div>
-            </div>
-            <div class="form-group row" style="margin: 1em;">
-                <label class="col-sm-2 col-form-label">Mot de passe</label>
-                <div class="col-sm-4">
-                    {{ registration_form.password(placeholder='Mot de passe', class='form-control') }}
+                <div class="form-group row" style="margin: 1em;">
+                    <label class="col-sm-2 col-form-label">Mot de passe</label>
+                    <div class="col-sm-4">
+                        {{ registration_form.password(placeholder='Mot de passe', class='form-control') }}
+                    </div>
                 </div>
+                <button type="submit" class="btn btn-primary submit-button" style="margin: 1em;">Inscription</button>
+            </form>
+            <div style="margin: 1em;">Vous possédez déjà un compte ? Connectez-vous <a
+                    href="{{ url_for('auth.login') }}">ici</a>
             </div>
-            <button type="submit" class="btn btn-primary submit-button" style="margin: 1em;">Inscription</button>
-        </form>
-        <div style="margin: 1em;">Vous possédez déjà un compte ? Connectez-vous <a href="{{ url_for('auth.login') }}">ici</a>
         </div>
     </div>
 {% endblock %}
