--- a/Prototype/templates/authentication/login.html.jinja2
+++ b/Prototype/templates/authentication/login.html.jinja2
@@ -6,7 +6,7 @@
 
 {% block content %}
     <div class="container">
-        <h1>Connexion</h1>
+        <h1 class="section-title">Connexion</h1>
         <div>
             {# To display error messages #}
             {% with messages = get_flashed_messages() %}
@@ -17,25 +17,27 @@
                 {% endif %}
             {% endwith %}
         </div>
-        <form method="POST" action="{{ url_for('auth.login') }}">
-            {# Hidden tag used for CSRF protection #}
-            {{ login_form.hidden_tag() }}
-            <div class="form-group row" style="margin: 1em;">
-                <label class="col-sm-2 col-form-label">Nom d'utilisateur</label>
-                <div class="col-sm-4">
-                    {{ login_form.username(placeholder="Nom d'utilisateur", class='form-control') }}
+        <div class="login-form">
+            <form method="POST" action="{{ url_for('auth.login') }}">
+                {# Hidden tag used for CSRF protection #}
+                {{ login_form.hidden_tag() }}
+                <div class="form-group row" style="margin: 1em;">
+                    <label class="col-sm-2 col-form-label">Nom d'utilisateur</label>
+                    <div class="col-sm-4">
+                        {{ login_form.username(placeholder="Nom d'utilisateur", class='form-control') }}
+                    </div>
                 </div>
-            </div>
-            <div class="form-group row" style="margin: 1em;">
-                <label class="col-sm-2 col-form-label">Mot de passe</label>
-                <div class="col-sm-4">
-                    {{ login_form.password(placeholder='Mot de passe', class='form-control') }}
+                <div class="form-group row" style="margin: 1em;">
+                    <label class="col-sm-2 col-form-label">Mot de passe</label>
+                    <div class="col-sm-4">
+                        {{ login_form.password(placeholder='Mot de passe', class='form-control') }}
+                    </div>
                 </div>
+                <button type="submit" class="btn btn-primary submit-button" style="margin: 1em;">Connexion</button>
+            </form>
+            <div style="margin: 1em;">Vous ne possédez pas de compte ? Inscrivez-vous <a
+                    href="{{ url_for('auth.register') }}">ici</a>
             </div>
-            <button type="submit" class="btn btn-primary submit-button" style="margin: 1em;">Connexion</button>
-        </form>
-        <div style="margin: 1em;">Vous ne possédez pas de compte ? Inscrivez-vous <a
-                href="{{ url_for('auth.register') }}">ici</a>
         </div>
     </div>
 {% endblock %}
