--- a/Prototype/templates/post/post.html.jinja2
+++ b/Prototype/templates/post/post.html.jinja2
@@ -15,7 +15,8 @@
                     <footer class="blockquote-footer">
                         <div class="d-flex justify-content-sm-between flex-wrap">
                             <p>{{ post.username }} | {{ post.date }}</p>
-                            <button class="btn comment-button" data-bs-toggle="modal" data-bs-target="#{{ 'modal_'~post_card_id }}">
+                            <button class="btn comment-button" data-bs-toggle="modal"
+                                    data-bs-target="#{{ 'modal_'~post_card_id }}">
                                 Commentaires
                             </button>
                         </div>
@@ -43,7 +44,8 @@
                     <h4 class="subsection-title">Commentaires</h4>
                     <ul class="list-group">
                         {% for comment in post.comments %}
-                            <li class="list-group-item">{{ comment.body }}</li>
+                            <li class="list-group-item"><span
+                                    style="font-weight: bold">{{ comment.username }}</span> ~ {{ comment.body }}</li>
                         {% endfor %}
                     </ul>
                 </div>
@@ -53,7 +55,7 @@
                         <input type="text" class="form-control" id="{{ 'body'~post_card_id }}"
                                placeholder="Ajouter un commentaire">
                     </div>
-                    <button onclick="add_comment({{ post.user_id }},{{ post.id }}, '{{ post_card_id }}')"
+                    <button onclick="add_comment({{ post.user_id }}, {{ post.username }}, {{ post.id }}, '{{ post_card_id }}')"
                             type="button"
                             class="btn btn-primary">Commenter
                     </button>
