--- a/Prototype/templates/post/post_macro.html.jinja2
+++ b/Prototype/templates/post/post_macro.html.jinja2
@@ -45,7 +45,9 @@
                         <h4 class="subsection-title">Commentaires</h4>
                         <ul class="list-group">
                             {% for comment in post.comments %}
-                                <li class="list-group-item">{{ comment.body }}</li>
+                                <li class="list-group-item"><span
+                                        style="font-weight: bold">{{ comment.username }}</span> ~ {{ comment.body }}
+                                </li>
                             {% endfor %}
                         </ul>
                     </div>
@@ -55,7 +57,7 @@
                             <input type="text" class="form-control" id="{{ 'body'~post_card_id }}"
                                    placeholder="Ajouter un commentaire">
                         </div>
-                        <button onclick="add_comment({{ post.user_id }},{{ post.id }}, '{{ post_card_id }}')"
+                        <button onclick="add_comment({{ post.user_id }}, {{ post.username }}, {{ post.id }}, '{{ post_card_id }}')"
                                 type="button"
                                 class="btn btn-primary form-control comment-button">Commenter
                         </button>
@@ -112,7 +114,9 @@
                         <h4 class="subsection-title">Commentaires</h4>
                         <ul class="list-group">
                             {% for comment in post.comments %}
-                                <li class="list-group-item">{{ comment.body }}</li>
+                                <li class="list-group-item"><span
+                                        style="font-weight: bold">{{ comment.username }}</span> ~ {{ comment.body }}
+                                </li>
                             {% endfor %}
                         </ul>
                     </div>
