--- a/Prototype/templates/profile/profile.html.jinja2
+++ b/Prototype/templates/profile/profile.html.jinja2
@@ -29,6 +29,33 @@
             {% endwith %}
         {% endfor %}
     </div>
+    <h2 class="subsection-title">Votre tableau de bord</h2>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <div class="card-text">Vous avez posté {{ number_images_user }} images ce qui représente</div>
+                        <h5 class="card-title" style="margin-top: 0.75rem">{{ images_user_size }} Mb</h5>
+                        <div class="card-text"></div>
+                        de données stockées.
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <div class="card-text">Au total, {{ number_images_global }} images ont été postées, ce qui
+                            représente
+                        </div>
+                        <h5 class="card-title" style="margin-top: 0.75rem">{{ images_global_size }} Mb</h5>
+                        <div class="card-text"></div>
+                        de données stockées.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <h2 class="subsection-title">Se déconnecter</h2>
     <div class="text-center">
         <a href="{{ url_for('auth.logout') }}"><i class="bi bi-box-arrow-right"
