--- a/Prototype/templates/feed/feed.html.jinja2
+++ b/Prototype/templates/feed/feed.html.jinja2
@@ -16,4 +16,8 @@
             {% endwith %}
         {% endfor %}
     </div>
+    <div style="display: grid; place-items: center;">
+        <h2 class="subsection-title"><i class="bi bi-soundwave"></i></h2>
+        <h5 class="subsection-title">Vous avez vu tous les posts de votre feed !</h5>
+    </div>
 {% endblock %}
