--- a/Prototype/templates/profile/follow.html.jinja2
+++ b/Prototype/templates/profile/follow.html.jinja2
@@ -12,9 +12,12 @@
     <div class="container" style="max-width: 35rem">
         <ul class="list-group list-group-flush">
             {% for user in users %}
-                <li class="list-group-item follow-tile" style="margin: 1rem">
-                    {{ user_follow_tile(user, current_user) }}
-                </li>
+                {% if user.id != current_user.id %}
+                    {# You can't subscribe to yourself #}
+                    <li class="list-group-item follow-tile" style="margin: 1rem">
+                        {{ user_follow_tile(user, current_user) }}
+                    </li>
+                {% endif %}
             {% endfor %}
         </ul>
     </div>
