--- a/Prototype/templates/profile/profile.html.jinja2
+++ b/Prototype/templates/profile/profile.html.jinja2
@@ -32,7 +32,7 @@
     <h2 class="subsection-title">Votre tableau de bord</h2>
     <div class="container">
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-4">
                 <div class="card text-center">
                     <div class="card-body">
                         <div class="card-text">Vous avez posté {{ number_images_user }} images ce qui représente</div>
@@ -42,7 +42,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-4">
                 <div class="card text-center">
                     <div class="card-body">
                         <div class="card-text">Au total, {{ number_images_global }} images ont été postées, ce qui
@@ -51,6 +51,19 @@
                         <h5 class="card-title" style="margin-top: 0.75rem">{{ images_global_size }} Mb</h5>
                         <div class="card-text"></div>
                         de données stockées.
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <div class="card-text">Au total, vous avez chargé {{ number_images_seen }} images au cours de
+                            votre utilisation de Protogram, ce qui
+                            représente
+                        </div>
+                        <h5 class="card-title" style="margin-top: 0.75rem">{{ images_seen_size }} Mb</h5>
+                        <div class="card-text"></div>
+                        de données consommées.
                     </div>
                 </div>
             </div>
