--- a/Prototype/templates/base.html.jinja2
+++ b/Prototype/templates/base.html.jinja2
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@firstandthird/tokens@latest/lib/tokens.css"/>
 
     {% block title %}
         <title>Default title</title>
@@ -30,8 +31,14 @@
                     class="nav-icon bi bi-person-circle"></i></a>
             <a class="nav-item nav-link" href="{{ url_for('follow.follow_index') }}"><i
                     class="nav-icon bi bi-people"></i></a>
-            <a class="nav-item nav-link" href=""><i
+            <a class="nav-item nav-link" href="{{ url_for('search_post.search') }}"><i
                     class="nav-icon bi bi-search"></i></a>
+            {#            <form class="d-flex">#}
+            {#                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">#}
+            {#                <a class="btn btn-outline-success" href="{{ url_for('search_post.search') }}" type="button">#}
+            {#                    Search#}
+            {#                </a>#}
+            {#            </form>#}
         </div>
         <button id="themeSwitch"><i class="bi bi-brightness-high"></i></button>
     </div>
@@ -80,15 +87,15 @@
         })
     }
 
-        function add_comment(post_id, id) {
+    function add_comment(post_id, id) {
         $.ajax({
             url: '/create_comment/add_comment',
             type: 'POST',
             dataType: 'json',
             contentType: "application/json",
             data: JSON.stringify({
-                "body": $("#body"+id).val(),
-                "post_id":  post_id,
+                "body": $("#body" + id).val(),
+                "post_id": post_id,
             })
             ,
             success: function () {
