--- a/Prototype/templates/post/create_post.html.jinja2
+++ b/Prototype/templates/post/create_post.html.jinja2
@@ -26,9 +26,30 @@
                             {{ post_form.description(placeholder='Description', class='form-control') }}
                         </div>
                     </div>
+                    <div class="form-group row" style="margin: 1em;">
+                        <label class="col-sm-2 col-form-label">Tags</label>
+                        <div class="col-sm-4">
+                            {{ post_form.tags(placeholder='Tag', class='form-control') }}
+                        </div>
+                    </div>
+                    {#                    <div data-module="Tokens" data-module-endpoint="tokens.json?q=${term}" data-module-strict="false"#}
+                    {#                         data-action="focus">#}
+                    {#                        <div data-name="tokensContainer"></div>#}
+                    {#                        <input type="text"#}
+                    {#                               name="value"#}
+                    {#                               data-name="input"#}
+                    {#                               data-action="search"#}
+                    {#                               data-action-type="input"#}
+                    {#                               placeholder="ajouter des tags">#}
+                    {#                        <div data-name="resultsContainer">#}
+                    {#                            {% for  %}#}
+                    {#                            {{ post_form.tags(placeholder='Tag', class='form-control') }}#}
+                    {#                        </div>#}
+                    {#                    </div>#}
                     <button type="submit" class="btn btn-primary submit-button" style="margin: 1em;">Poster</button>
                 </form>
             </div>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/@firstandthird/tokens@latest/dist/tokens.bundle.js"></script>
 {% endblock %}
