Added readme and deleted unused files

--- a/Prototype/templates/base.html.jinja2
+++ b/Prototype/templates/base.html.jinja2
@@ -22,7 +22,7 @@
 
 <nav class="navbar navbar-expand">
     <div class="container justify-content-between" id="navbarCenterContent">
-        <a class="navbar-brand" href="/"><img class="logo" src="../static/pictures/logo.png" alt="Protogram"></a>
+        <a class="navbar-brand" href="/"><img class="logo" src="../static/logo.png" alt="Protogram"></a>
         <div class="navbar-nav">
             <a class="nav-item nav-link" href="{{ url_for('feed.feed_index') }}"><i
                     class="nav-icon bi bi-house"></i></a>
