--- a/Prototype/templates/post/search_post.html.jinja2
+++ b/Prototype/templates/post/search_post.html.jinja2
@@ -16,12 +16,12 @@
                     {{ search_form.hidden_tag() }}
                     {{ search_form.crsf_token }}
                     <div class="form-group row" style="margin: 1em;">
-                        <label class="col-sm-2 col-form-label">Tags</label>
+                        <label class="col-sm-2 col-form-label"></label>
                         <div class="col-sm-4">
-                            {{ search_form.description(placeholder='Tag', class='form-control') }}
+                            {{ search_form.description(placeholder='Mot-clef', class='form-control') }}
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary submit-button" style="margin: 1em;">search</button>
+                    <button type="submit" class="btn btn-primary submit-button" style="margin: 1em;">Faire une recherche</button>
                 </form>
             </div>
         </div>
