--- a/Prototype/templates/post/post.html.jinja2
+++ b/Prototype/templates/post/post.html.jinja2
@@ -1,11 +1,16 @@
 <div id="{{ post_card_id }}">
     <div class="card post">
-        <img src="../../static/images_storage/{{ post.image_name }}" class="card-img-top" alt="Post {{ post.id }}">
+        <img src="../../static/images_storage/{{ post.image_name }}" class="card-img-top" alt="Post {{ post.id }}"
+             style="object-fit: cover; width: 100%;
+  height: 400px;">
         <div class="card-body">
             <blockquote class="blockquote mb-0">
                 <div id="post_body">
                     <div class="d-flex justify-content-sm-between flex-wrap">
-                        <p class="flex-wrap" style="width: 18rem">{{ post.description }}</p>
+                        <p class="flex-wrap" style="width: 18rem  ;   white-space:pre;
+    overflow:hidden;
+    text-overflow: ellipsis;
+    width: 290px ;">{{ post.description }}</p>
                         <button id="{{ 'button'~post_card_id }}" onclick="heart_post({{ post.id }})"
                                 class="heart-button" {% if post.current_user_liked_it %}
                                 style="color: indianred" {% endif %}><i
